# chinook/api/genres.py
@@ -1,17 +1,15 @@
 from chinook.json_response import JsonResponse
-from chinook.repositories.album_repository import AlbumRepository
+from chinook.repositories import GenreRepository
 from chinook.utils import Paginator
 from chocs import HttpRequest, HttpResponse, router
 from gata import serialise
 from kink import inject
 
 
-@router.get("/albums")
+@router.get("/genres")
 @inject()
-def albums_list(request: HttpRequest, repository: AlbumRepository) -> HttpResponse:
-    paginator = Paginator(
-        request.query_string, "/albums", allow_fields=["title", "artist.name"]
-    )
+def genres_list(request: HttpRequest, repository: GenreRepository) -> HttpResponse:
+    paginator = Paginator(request.query_string, "/genres", allow_fields=["name"])
     items = []
     for item in repository.find_by_paginator(paginator):
         items.append(serialise(item))
@@ -19,4 +17,4 @@ def albums_list(request: HttpRequest, repository: AlbumRepository) -> HttpRespon
     return JsonResponse({"body": items, **paginator.hateos})
 
 
-__all__ = ["albums_list"]
+__all__ = ["genres_list"]
